--- a/01-homepage/css/styles.css
+++ b/01-homepage/css/styles.css
@@ -62,8 +62,8 @@ h3{ font-size: 2.5em; font-family: 'Allura', cursive;}
 h4{ font-size: 1.5em; font-family: 'Nanum Myeongjo', serif;}
 h5{ font-size: 1.5em; font-family: 'MapoFlowerIsland', serif;}
 h6{ font-size: .9em; letter-spacing: 1px; }
-h7{ font-family: 'Nanum Myeongjo', serif;}
-h8{ font-family: 'Nanum Myeongjo', serif; font-weight:bold}
+h7{ font-family: 'Noto Serif KR', serif;}
+h8{ font-family: 'Noto Serif KR', serif; font-weight:bold}
 h9{ font-size: 2.5em; line-height: 1.5; font-weight: inherit; font-family: 'Jeju Myeongjo', serif;}
 h10{ font-size: 2.5em; line-height: 0.5; font-family: 'Noto Serif KR', serif;}
 h11{ font-size: 0.9em; font-family: 'Noto Serif KR', serif;}
